--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things for your project.
-          You can now clone and start to create a website for your project like this one.</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
+        <h1>WatVision</h1>
+        <p>Bringing accessible technology to the touch screen domain.</p>
+        <p><a class="btn btn-primary btn-lg" href="mailto:watvision.team@gmail.com" role="button">Contact The Team</a></p>
     </div>
 </div>
 
@@ -16,21 +15,23 @@ layout: default
 
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
+            <h2 class="header-light regular-pad">Our Goal
+            </h2>
             <blockquote>
-              <p>Jekyll is a simple, blog-aware, static site generator. It takes a template
-              directory containing raw text files in various formats, runs it through
-              a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
-              and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
-              spits out a complete, ready-to-publish static website suitable
-              for serving with your favorite web server. Jekyll also happens to be the engine
-              behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
-              to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+              <p> <b>To create a product that will
+                    allow a visually impaired person to interact with any
+                    touch screen.</b> <br/>
+                  Touch screens are becoming more and more common in everyday life. Airplanes, 
+                  movie theatres, grocery stores, mall directories and more all use touch screens to 
+                provide services. Unfortunately these touch screens often do not have 
+                any accessible features for someone who is unable to clearly see 
+                all of its elements. In general touch screens aren't accessible to someone who is visually impaired,
+                and we aim to change that.
+                </p>
             </blockquote>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/jekyll-dark.png" alt="" class="img-responsive">
+            <img src="img/watvision.png" alt="" class="img-responsive">
         </div>
     </div>
 
@@ -38,23 +39,25 @@ layout: default
 
     <div class="row">
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by clonening source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and publsihed under your project's subdomain on `github.io`.
+            <h3 class="text-center">Who We Are</h3>
+            <p>The WatVision is made up of 6 fourth year Mechatronics Engineering students from
+                the university of Waterloo. The team has a diverse background in different areas of technology
+                such as software, electrical and mechanical engineering concepts. 
             </p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom by overwriting bootstrap sass variables for different color set, font options, etc.</p>
+            <h3 class="text-center">What We Are Doing Right Now</h3>
+            <p>WatVision aims to have a functional prototype in March 2018. Currently the team is designing, building
+                and iterating upon different prototype designs.
+            </p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git based source control</h3>
-            <p>Leverege from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+            <h3 class="text-center">How You Can Help</h3>
+            <p>If you are interested in helping this project, or just want to learn more please email the team at:
+                <a href='mailto:watvision.team@gmail.com'>watvision.team@gmail.com</a> <br/>
+                We are always looking to hear from someone who is visually impaired on how they interact with touch screens,
+                and we use that feedback when we are evaluating different designs. 
+            </p>
         </div>
     </div>
 
