--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
     <div class="row">
         <div class="col-sm-4">
             <h3 class="text-center">Who We Are</h3>
-            <p>The WatVision is made up of 6 fourth year Mechatronics Engineering students from
+            <p>The WatVision team is made up of 6 fourth year Mechatronics Engineering students from
                 the university of Waterloo. The team has a diverse background in different areas of technology
                 such as software, electrical and mechanical engineering concepts. 
             </p>
