Updated Main Page and added schedule post

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ layout: default
     <div class="container">
         <h1>WatVision</h1>
         <p>Bringing accessible technology to the touch screen domain.</p>
-        <p><a class="btn btn-primary btn-lg" href="mailto:watvision.team@gmail.com" role="button">Contact The Team</a></p>
     </div>
 </div>
 
@@ -28,10 +27,31 @@ layout: default
                 all of its elements. In general touch screens aren't accessible to someone who is visually impaired,
                 and we aim to change that.
                 </p>
-            </blockquote>
+            </blockquote> <br/>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/watvision.png" alt="" class="img-responsive">
+            <img src="img/watvision.png" alt="WatVision Logo" class="img-responsive">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+        <div class="container">
+            <h5>Interested in this product? Subscribe for product updates!</h5>
+            <form id="form" target="_self" onsubmit="" action="">
+                <div class="form-group">
+                    <fieldset>
+                        <label>Email Address</label>
+                        <input type="email" class="form-control" id="emailinput" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </fieldset>
+                </div>
+                <button id="send" class="btn btn-primary" type="submit">
+                    Send
+                </button>
+            </form>
+            <h5 id="subscribesuccess" style="display: none">Thank you! We'll be in touch :)</h5>
         </div>
     </div>
 
@@ -42,13 +62,15 @@ layout: default
             <h3 class="text-center">Who We Are</h3>
             <p>The WatVision team is made up of 6 fourth year Mechatronics Engineering students from
                 the university of Waterloo. The team has a diverse background in different areas of technology
-                such as software, electrical and mechanical engineering concepts. 
+                such as software, electrical and mechanical engineering concepts. <br/>
+                <p class="text-center"><a class="btn btn-primary" href="{% post_url 2017-11-08-meet-the-team %}" role="button">Meet The Team</a></p>
             </p>
         </div>
         <div class="col-sm-4">
             <h3 class="text-center">What We Are Doing Right Now</h3>
             <p>WatVision aims to have a functional prototype in March 2018. Currently the team is designing, building
                 and iterating upon different prototype designs.
+                <p class="text-center"><a class="btn btn-primary" href="{% post_url 2017-11-10-our-schedule %}" role="button">See Our Schedule</a></p>
             </p>
         </div>
         <div class="col-sm-4">
@@ -57,9 +79,11 @@ layout: default
                 <a href='mailto:watvision.team@gmail.com'>watvision.team@gmail.com</a> <br/>
                 We are always looking to hear from someone who is visually impaired on how they interact with touch screens,
                 and we use that feedback when we are evaluating different designs. 
+                <p class="text-center"><a class="btn btn-primary" href="mailto:watvision.team@gmail.com" role="button">Contact The Team</a></p>
             </p>
         </div>
     </div>
 
 
 </div>
+
