Fixed email subscription bar

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@ layout: default
             <h5>Interested in this product? Subscribe for product updates!</h5>
             <form id="form" target="_self" onsubmit="" action="">
                 <div class="form-group">
-                    <fieldset>
-                        <label>Email Address</label>
-                        <input type="email" class="form-control" id="emailinput" aria-describedby="emailHelp" placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </fieldset>
+                    <label>Email Address</label>
+                    <input type="email" class="form-control" id="emailinput" aria-describedby="emailHelp" placeholder="Enter email">
+                    <p class="text-muted">We'll never share your email with anyone else.</p>
                 </div>
                 <button id="send" class="btn btn-primary" type="submit">
                     Send
