Updated peoples choice

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ layout: default
                 all of its elements. In general touch screens aren't accessible to someone who is visually impaired,
                 and we aim to change that.
                 </p>
+                <p class="text-center"><a class="btn btn-primary" href="https://uwaterloo.ca1.qualtrics.com/jfe/form/SV_1ZBgORMkFibkAct?Q_CHL=qr" role="button">Vote for us for people's choice!</a></p>
+
             </blockquote> <br/>
         </div>
         <div class="col-md-6 text-center">
