Added news section to index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@ layout: default
     </div>
 
     <hr>
+    <h2 class="header-light regular-pad">News
+    </h2>
+    <div class="wide" style="background-image:url('/img/award.jpg');">
+      <div class="col-xs-4 line"><hr></div>
+      <div class="col-xs-4 logo">The WatVision team won the most innovative award!</div>
+      <div class="col-xs-4 line"><hr></div>
+    </div>
+
+    <hr>
 
     <div class="row">
         <div class="container">
