--- a/index.html
+++ b/index.html
@@ -35,12 +35,26 @@ layout: default
     </div>
 
     <hr>
-    <h2 class="header-light regular-pad">News
-    </h2>
-    <div class="wide" style="background-image:url('/img/award.jpg');">
-      <div class="col-xs-4 line"><hr></div>
-      <div class="col-xs-4 logo">The WatVision team won the most innovative award!</div>
-      <div class="col-xs-4 line"><hr></div>
+
+    <h2 class="header-light regular-pad">Current Status & Future Plans</h2>
+    <div class="row">
+    <div class="col-md-6">
+        <div class="wide" style="background-image:url('/img/award.jpg');">
+        <div class="col-xs-4 line"><hr></div>
+        <div class="col-xs-4 logo">Most Innovative Award</div>
+        <div class="col-xs-4 line"><hr></div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <blockquote>
+            <p>
+                The WatVision team presented at the University of Waterloo Mechatronics Symposium and won two awards: The General
+                Motors Innovation award, and also 2nd place in the People's Choice award. <br/><br/>
+                The team aims to ensure that this technology becomes available to as many people as possible in the future,
+                and any further news will be posted on this site, or you can subscribe to be notified by email below. Stay tuned!
+            </p>
+        </blockquote>
+    </div>
     </div>
 
     <hr>
