--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
             </blockquote> <br/>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/watvision.png" alt="WatVision Logo" class="img-responsive">
+            <div id="youTubePlayer"></div>
         </div>
     </div>
 
@@ -89,9 +89,9 @@ layout: default
         </div>
         <div class="col-sm-4">
             <h3 class="text-center">What We Are Doing Right Now</h3>
-            <p>WatVision aims to have a functional prototype in March 2018. Currently the team is designing, building
-                and iterating upon different prototype designs.
-                <p class="text-center"><a class="btn btn-primary" href="{% post_url 2017-11-10-our-schedule %}" role="button">See Our Schedule</a></p>
+            <p>Having completed our demo for our project, the WatVision team is now looking at exciting
+                opportunities to make this technology a reality, and the best way to put our system in the hands
+                of people around the world.
             </p>
         </div>
         <div class="col-sm-4">
@@ -99,7 +99,7 @@ layout: default
             <p>If you are interested in helping this project, or just want to learn more please email the team at:
                 <a href='mailto:watvision.team@gmail.com'>watvision.team@gmail.com</a> <br/>
                 We are always looking to hear from someone who is visually impaired on how they interact with touch screens,
-                and we use that feedback when we are evaluating different designs. 
+                and we use that feedback while developing this product.
                 <p class="text-center"><a class="btn btn-primary" href="mailto:watvision.team@gmail.com" role="button">Contact The Team</a></p>
             </p>
         </div>
