Added css to fix youtube iframe size
Updated CSS

Fixed CSS styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ layout: default
             </blockquote> <br/>
         </div>
         <div class="col-md-6 text-center">
-            <div id="youTubePlayer"></div>
+            <div class="youtubeVidHolder">
+                <div id="youTubePlayer"></div>
+            </div>
         </div>
     </div>
 
