Added open source notice

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>WatVision</h1>
-        <p>Bringing accessible technology to the touch screen domain.</p>
+        <p>An Open Source Project Bringing accessible technology to the touch screen domain.</p>
     </div>
 </div>
 
@@ -38,7 +38,26 @@ layout: default
 
     <hr>
 
-    <h2 class="header-light regular-pad">Current Status & Future Plans</h2>
+    <h2 class="header-light regular-pad">Current Status</h2>
+    <div class="row">
+    <div class="col-md-6">
+        <blockquote>
+            <p>
+                Recently WatVision has become open source. The entirety of the source code is now available on Github under the MIT license. The goal 
+                for this change was to ensure that the techonlogy would be available to any other developers who would want to
+                pursue this project further, or add accessibility to their own projects.
+            </p>
+        </blockquote>
+    </div>
+    <div class="col-md-6">
+        View the Source Code Here:
+        <p class="text-center"><a class="btn btn-primary" href="https://github.com/watvision/Visionsystem" role="button">WatVision Source Code</a></p>
+    </div>
+    </div>
+
+    <hr>
+
+    <h2 class="header-light regular-pad">Awards</h2>
     <div class="row">
     <div class="col-md-6">
         <div class="wide" style="background-image:url('/img/award.jpg');">
