Updated open source info

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ layout: default
         </blockquote>
     </div>
     <div class="col-md-6">
-        View the Source Code Here:
+        <blockquote class="text-center">
+            <p>View the Source Code Here:</p>
+        </blockquote>
         <p class="text-center"><a class="btn btn-primary" href="https://github.com/watvision/Visionsystem" role="button">WatVision Source Code</a></p>
     </div>
     </div>
@@ -100,7 +102,7 @@ layout: default
     <hr>
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
             <h3 class="text-center">Who We Are</h3>
             <p>The WatVision team is made up of 6 fourth year Mechatronics Engineering students from
                 the university of Waterloo. The team has a diverse background in different areas of technology
@@ -108,20 +110,12 @@ layout: default
                 <p class="text-center"><a class="btn btn-primary" href="{% post_url 2017-11-08-meet-the-team %}" role="button">Meet The Team</a></p>
             </p>
         </div>
-        <div class="col-sm-4">
-            <h3 class="text-center">What We Are Doing Right Now</h3>
-            <p>Having completed our demo for our project, the WatVision team is now looking at exciting
-                opportunities to make this technology a reality, and the best way to put our system in the hands
-                of people around the world.
-            </p>
-        </div>
-        <div class="col-sm-4">
-            <h3 class="text-center">How You Can Help</h3>
-            <p>If you are interested in helping this project, or just want to learn more please email the team at:
+        <div class="col-sm-6">
+            <h3 class="text-center">Contact Us</h3>
+            <p>If you want to get in contact with the team you can email us at:
                 <a href='mailto:watvision.team@gmail.com'>watvision.team@gmail.com</a> <br/>
-                We are always looking to hear from someone who is visually impaired on how they interact with touch screens,
-                and we use that feedback while developing this product.
-                <p class="text-center"><a class="btn btn-primary" href="mailto:watvision.team@gmail.com" role="button">Contact The Team</a></p>
+                We are happy to answer any questions about our project.
+                <p class="text-center"><a class="btn btn-primary" href="mailto:watvision.team@gmail.com" role="button">Email Us</a></p>
             </p>
         </div>
     </div>
