Updated index to include james dyson award

--- a/index.html
+++ b/index.html
@@ -61,23 +61,53 @@ layout: default
 
     <h2 class="header-light regular-pad">Awards</h2>
     <div class="row">
-    <div class="col-md-6">
-        <div class="wide" style="background-image:url('/img/award.jpg');">
-        <div class="col-xs-4 line"><hr></div>
-        <div class="col-xs-4 logo">Most Innovative Award</div>
-        <div class="col-xs-4 line"><hr></div>
+        <div class="col-md-6">
+            <blockquote>
+                <p>
+                    <a href="https://www.jamesdysonaward.org">The James Dyson Award</a> is an annual competition which has the goal:
+                    'design something that solves a problem'. This open ended Engineering Design award was made to encourage engineering, 
+                    and innovation. <br/> <br/>
+                    
+                    The WatVision team is incredibly proud to have won the James Dyson 2018 award at the <b>national level</b>.
+                    The WatVision design competed with different engineering solutions from all over Canada. <br/> <br/>
+
+                    Here are a small selection of the articles written about this achievement:
+                    <ul>
+                        <li><a href="https://uwaterloo.ca/stories/engineering-students-project-captures-national-dyson-award-0">
+                            Engineering students’ project captures national Dyson award - University of Waterloo</a>
+                        </li>
+                        <li><a href="https://www.kitchenertoday.com/local-news/waterloo-developed-app-that-helps-visually-impaired-wins-award-1035918">
+                            Waterloo developed app that helps visually impaired wins award - Kitchener Today</a>
+                        </li>
+                        <li>Please search for: 'WatVision James Dyson Award' if you want to learn more!
+                        </li>
+                    </ul>
+                </p>
+            </blockquote>
+        </div>
+        <div class="col-md-6">
+            <div class="wide" style="background-image:url('/img/dysonaward.png');">
+            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <blockquote>
-            <p>
-                The WatVision team presented at the University of Waterloo Mechatronics Symposium and won two awards: The General
-                Motors Innovation award, and also 2nd place in the People's Choice award. <br/><br/>
-                The team aims to ensure that this technology becomes available to as many people as possible in the future,
-                and any further news will be posted on this site, or you can subscribe to be notified by email below. Stay tuned!
-            </p>
-        </blockquote>
-    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="wide" style="background-image:url('/img/award.jpg');">
+            <div class="col-xs-4 line"><hr></div>
+            <div class="col-xs-4 logo">Most Innovative Award</div>
+            <div class="col-xs-4 line"><hr></div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <blockquote>
+                <p>
+                    The WatVision team presented at the University of Waterloo Mechatronics Symposium and won two awards: The General
+                    Motors Innovation award, and also 2nd place in the People's Choice award. <br/><br/>
+                    The team aims to ensure that this technology becomes available to as many people as possible in the future,
+                    and any further news will be posted on this site, or you can subscribe to be notified by email below. Stay tuned!
+                </p>
+            </blockquote>
+        </div>
     </div>
 
     <hr>
