Fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
         <blockquote>
             <p>
                 Recently WatVision has become open source. The entirety of the source code is now available on Github under the MIT license. The goal 
-                for this change was to ensure that the techonlogy would be available to any other developers who would want to
+                for this change was to ensure that the technology would be available to any other developers who would want to
                 pursue this project further, or add accessibility to their own projects.
             </p>
         </blockquote>
